--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,30 @@
-<footer class="site-footer">
-   <div class="footer">
-    <p>{{ site.time | date: 'Last modified: %B %d, %Y at %T' }}.
-    Layout based on a tweaked <a href="https://github.com/poole/hyde">hyde</a> theme by Mark Otto and the standard <a href="https://github.com/jekyll/minima">minima</a> theme.<p>
-  </div>
-</footer>
+<div class="footer three_columns">
+	<div class="column1">
+		<p>Related software</p>
+		<ul class="unstyled">
+			<li><a href="http://www.feynarts.de">FeynArts</a></li>
+			<li><a href="http://www.feynarts.de/looptools">LoopTools</a></li>
+			<li><a href="https://packagex.hepforge.org/">Package-X</a></li>
+			<li><a href="http://www.feynarts.de/formcalc">FormCalc</a></li>
+			<li><a href="https://www.nikhef.nl/~form/">Form</a></li>
+		</ul>
+	</div>
+	
+	<div class="column2">
+		<p>Formalities</p>
+		<ul class="unstyled">
+			<li><a class="topbar-nav-item" href="{{ site.url }}/impressum">Imprint (Impressum)</a></li>
+			<li><a class="topbar-nav-item" href="{{ site.url }}/datenschutz">Privacy (Datenschutz)</a></li>
+		</ul>
+	</div>
+	
+	<div class="column3">
+		<p>Community</p>
+		<ul class="unstyled">
+			<li><a href="https://github.com/FeynCalc/feyncalc">GitHub code repository</a></li>
+			<li><a href="https://github.com/FeynCalc/feyncalc/wiki">Wiki</a></li>
+			<li><a href="/forum">Forum / mailing list</a></li>
+		</ul>
+	</div>
+</div>
+<!--{{ site.time | date: 'Last modified: %B %d, %Y at %T' }}-->
