--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,20 @@
----
-layout: default
----
 
-<div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
-  {{ content }}
-</div>
+
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
+
+{% include head.html %}
+
+<body>
+
+{% include topbar.html %}
+
+	<div class="page">
+	  <h2 class="page-title">{{ page.title }}</h2>
+	  {{ content }}
+	</div>
+
+
+</body>
+</html>
