--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
 			<li><a href="http://www.feynarts.de/looptools">LoopTools</a></li>
 			<li><a href="https://packagex.hepforge.org/">Package-X</a></li>
 			<li><a href="http://www.feynarts.de/formcalc">FormCalc</a></li>
+			<li><a href="https://github.com/FormTracer/FormTracer">FormTracer</a></li>
 			<li><a href="https://www.nikhef.nl/~form/">Form</a></li>
 		</ul>
 	</div>
