--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,10 @@
 		<p>Related software</p>
 		<ul class="unstyled">
 			<li><a href="http://www.feynarts.de">FeynArts</a></li>
+			<li><a href="https://feynrules.irmp.ucl.ac.be/">FeynRules</a></li>
 			<li><a href="http://www.feynarts.de/looptools">LoopTools</a></li>
 			<li><a href="https://packagex.hepforge.org/">Package-X</a></li>
+			<li><a href="https://porthos.tecnico.ulisboa.pt/FeynMaster/">FeynMaster</a></li>
 			<li><a href="http://www.feynarts.de/formcalc">FormCalc</a></li>
 			<li><a href="https://github.com/FormTracer/FormTracer">FormTracer</a></li>
 			<li><a href="https://www.nikhef.nl/~form/">Form</a></li>
