Integrated examples into the website.

--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -21,6 +21,7 @@
 			<li><a class="topbar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.url }}/">Home</a></li>
 			<li><a class="topbar-nav-item" href="{{ site.url }}/news">News</a></li>
 			<li><a class="topbar-nav-item" href="{{ site.url }}/reference">Guide</a></li>
+			<li><a class="topbar-nav-item" href="{{ site.url }}/examples">Examples</a></li>
 			<li><a class="topbar-nav-item" href="{{ site.url }}/forum">Forum</a></li>
 			
 			<li><form method="get" action="https://encrypted.google.com/search">
