--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,17 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
 
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {
+    inlineMath: [['$','$'], ['\\(','\\)']],
+    processEscapes: true
+  }
+});
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
+
   {% include head.html %}
 
   <body>
