--- a/css/poole.css
+++ b/css/poole.css
@@ -237,7 +237,7 @@ img {
 /* Tables */
 table {
   margin-bottom: 1rem;
-  width: 100%;
+/*  width: 100%; */
   border: 1px solid #e5e5e5;
   border-collapse: collapse;
 }
