--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -22,7 +22,7 @@
 			<li><a class="topbar-nav-item" href="{{ site.url }}/news">News</a></li>
 			<li><a class="topbar-nav-item" href="{{ site.url }}/reference">Guide</a></li>
 			<li><a class="topbar-nav-item" href="{{ site.url }}/examples">Examples</a></li>
-			<li><a class="topbar-nav-item" href="{{ site.url }}/forum">Forum</a></li>
+			<li><a class="topbar-nav-item" href="https://github.com/FeynCalc/feyncalc/discussions">Forum</a></li>
 			
 			<li><form method="get" action="https://encrypted.google.com/search">
 				<input type="hidden" name="as_q" value="site:feyncalc.org OR site:feyncalc.github.io OR site:github.com/FeynCalc">
