Updated the front page.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 		<p>Related software</p>
 		<ul class="unstyled">
 			<li><a href="http://www.feynarts.de">FeynArts</a></li>
+			<li><a href="http://cfif.ist.utl.pt/~paulo/qgraf.html">QGRAF</a></li>
 			<li><a href="https://feynrules.irmp.ucl.ac.be/">FeynRules</a></li>
 			<li><a href="http://www.feynarts.de/looptools">LoopTools</a></li>
 			<li><a href="https://packagex.hepforge.org/">Package-X</a></li>
@@ -10,6 +11,9 @@
 			<li><a href="http://www.feynarts.de/formcalc">FormCalc</a></li>
 			<li><a href="https://github.com/FormTracer/FormTracer">FormTracer</a></li>
 			<li><a href="https://www.nikhef.nl/~form/">Form</a></li>
+			<li><a href="https://bitbucket.org/feynmanIntegrals/fire/">FIRE</a></li>
+			<li><a href="https://github.com/gudrunhe/secdec/">pySecDec</a></li>
+			<li><a href="https://home.bway.net/lewis/">FERMAT</a></li>
 		</ul>
 	</div>
 	
@@ -26,7 +30,7 @@
 		<ul class="unstyled">
 			<li><a href="https://github.com/FeynCalc/feyncalc">GitHub code repository</a></li>
 			<li><a href="https://github.com/FeynCalc/feyncalc/wiki">Wiki</a></li>
-			<li><a href="/forum">Forum / mailing list</a></li>
+			<li><a href="https://github.com/FeynCalc/feyncalc/discussions">Forum</a></li>
 		</ul>
 	</div>
 </div>
