--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,10 +26,10 @@
   <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png">
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
+  <!-- <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml"> -->
 
   <!-- Google Analyics -->
-  {% if jekyll.environment == 'production' and site.google_analytics %}
+  <!--{% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
-  {% endif %}
+  {% endif %} -->
 </head>
